--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -91,7 +91,7 @@ spec:
                   {
                     "upstream-version": "14.0.27",
                     "image": "quay.io/infinispan/server:14.0.27.Final"
-                  }, 
+                  },
                   {
                     "upstream-version": "14.0.32",
                     "image": "quay.io/infinispan/server:14.0.32.Final"
@@ -115,6 +115,10 @@ spec:
                   {
                     "upstream-version": "15.0.8",
                     "image": "quay.io/infinispan/server:15.0.8.Final"
+                  },
+                  {
+                    "upstream-version": "15.0.10",
+                    "image": "quay.io/infinispan/server:15.0.10.Final"
                   }
                 ]
             - name: POD_NAME
