--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -119,6 +119,10 @@ spec:
                   {
                     "upstream-version": "15.0.10",
                     "image": "quay.io/infinispan/server:15.0.10.Final"
+                  },
+                  {
+                    "upstream-version": "15.0.11",
+                    "image": "quay.io/infinispan/server:15.0.11.Final"
                   }
                 ]
             - name: POD_NAME
