--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -123,6 +123,10 @@ spec:
                   {
                     "upstream-version": "15.0.11",
                     "image": "quay.io/infinispan/server:15.0.11.Final"
+                  },
+                  {
+                    "upstream-version": "15.1.0",
+                    "image": "quay.io/infinispan/server:15.1.0.Final"
                   }
                 ]
             - name: POD_NAME
