--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -127,6 +127,10 @@ spec:
                   {
                     "upstream-version": "15.1.0",
                     "image": "quay.io/infinispan/server:15.1.0.Final"
+                  },
+                  {
+                    "upstream-version": "15.1.1",
+                    "image": "quay.io/infinispan/server:15.1.1.Final"
                   }
                 ]
             - name: POD_NAME
