--- a/config/manifests/bases/infinispan-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/infinispan-operator.clusterserviceversion.yaml
@@ -314,4 +314,7 @@ spec:
   provider:
     name: Infinispan
   replaces: infinispan-operator.v2.4.8
+  skips:
+  - infinispan-operator.v2.4.7
+  - infinispan-operator.v2.4.8
   version: 0.0.0
