[#2192] Add test to ensure that all upgrades work across Operand graph in latest CSV release
- Allow Operand versions to be skipped in upgrades tests by providing
  csv of Operand upstream refs via TESTING_OPERAND_IGNORE_LIST env
  variable

- [#2190] Skip testing upgrades to 15.1.0 and 15.1.1 operands due to
  infinispan/infinispan#13519

- [#2190] Add OLM skips for 2.4.8 and 2.4.9 releases

- Ignore restore failures related to: infinispan/infinispan#13571

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,10 +69,14 @@ jobs:
   upgrades:
     needs: unit
     uses: ./.github/workflows/test_upgrades.yml
+    with:
+      skipList: '15.1.0,15.1.1'
 
   hr-rolling-upgrades:
     needs: unit
     uses: ./.github/workflows/test_hr_rolling_upgrades.yml
+    with:
+      skipList: '15.1.0,15.1.1'
 
   xsite:
     needs: unit
