--- a/.github/workflows/test_upgrades.yml
+++ b/.github/workflows/test_upgrades.yml
@@ -11,6 +11,49 @@ on:
         description: 'The name of the GH artifact containing the Operand image'
         required: false
         type: string
+      skipList:
+        description: 'A CSV of Operand versions to be skipped when executing TestOperandUpgrades'
+        required: false
+        type: string
+      testName:
+        description: 'The name of a specific upgrade test to be executed'
+        required: false
+        type: string
+      upgradeDepth:
+        description: 'The number of previous Operator versions to be installed before the latest version. Defaults to -1 which indicates all Operators in the OLM update graph should be applied.'
+        default: -1
+        required: false
+        type: number
+      ref:
+        type: string
+        required: false
+      repository:
+        type: string
+        required: false
+
+  workflow_dispatch:
+    inputs:
+      operand:
+        description: 'The FQN of the Operand image to be used. If left blank the most recent Operand defined in the Operator repository is used.'
+        required: false
+        type: string
+      operandArtifact:
+        description: 'The name of the GH artifact containing the Operand image'
+        required: false
+        type: string
+      skipList:
+        description: 'A CSV of Operand versions to be skipped when executing TestOperandUpgrades'
+        required: false
+        type: string
+      testName:
+        description: 'The name of a specific upgrade test to be executed'
+        required: false
+        type: string
+      upgradeDepth:
+        description: 'The number of previous Operator versions to be installed before the latest version. Defaults to -1 which indicates all Operators in the OLM update graph should be applied.'
+        default: -1
+        required: false
+        type: number
       ref:
         type: string
         required: false
@@ -65,7 +108,21 @@ jobs:
           kind load docker-image ${{ inputs.operand }}
 
       - name: Run GracefulShutdown Upgrade Tests
-        run: make upgrade-test SUBSCRIPTION_STARTING_CSV=infinispan-operator.v2.3.2
+        run: |
+          if [ "${DEPTH}" -gt -1 ]; then
+            export SUBSCRIPTION_STARTING_CSV=$(cat scripts/test-catalog.yml | yq "select(document_index == 1) | .entries[${DEPTH}].name")
+            if [ "${SUBSCRIPTION_STARTING_CSV}" == "null"; then
+              echo "No CSV found in test catalog for upgradeDepth '${DEPTH}'"
+              exit 1
+            fi
+          else
+            export SUBSCRIPTION_STARTING_CSV=infinispan-operator.v2.3.2
+          fi
+          make upgrade-test
+        env:
+          DEPTH: ${{ inputs.upgradeDepth }}
+          TEST_NAME: ${{ inputs.testName }}
+          TESTING_OPERAND_IGNORE_LIST: ${{ inputs.skipList }}
 
       - name: Inspect Cluster
         if: failure()
