--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -131,6 +131,10 @@ spec:
                   {
                     "upstream-version": "15.1.1",
                     "image": "quay.io/infinispan/server:15.1.1.Final"
+                  },
+                  {
+                    "upstream-version": "15.1.3",
+                    "image": "quay.io/infinispan/server:15.1.3.Final"
                   }
                 ]
             - name: POD_NAME
