--- a/.github/actions/kind/action.yml
+++ b/.github/actions/kind/action.yml
@@ -15,9 +15,15 @@ runs:
       run: go install sigs.k8s.io/kind@v0.24.0
       shell: bash
 
-    - name: Create Kind Cluster
+    - name: Create Kind Cluster with OLM
+      if: ${{ inputs.olm == 'true' }}
       run: ./scripts/ci/kind-with-olm.sh
       shell: bash
+
+    - name: Create Kind Cluster without OLM
+      if: ${{ inputs.olm == 'false' }}
+      run: ./scripts/ci/kind.sh
+      shell: bash    
 
     - name: Build Operator Image
       run: make operator-build operator-push IMG="localhost:5001/infinispan-operator"
