--- a/.github/workflows/test_hr_rolling_upgrades.yml
+++ b/.github/workflows/test_hr_rolling_upgrades.yml
@@ -26,10 +26,11 @@ jobs:
         uses: ./.github/actions/kind
 
       - name: Run Hot Rod Rolling Upgrade Tests
-        run: make upgrade-test
+        run: make hotrod-upgrade-test
         env:
           SUBSCRIPTION_STARTING_CSV: infinispan-operator.v2.3.2
           TESTING_OPERAND_IGNORE_LIST: ${{ inputs.skipList }}
+          INFINISPAN_CPU: 500m # prevent insufficient cpu error on test-rolling-upgrade pod start
 
       - name: Inspect Cluster
         if: failure()
