--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -135,6 +135,10 @@ spec:
                   {
                     "upstream-version": "15.1.3",
                     "image": "quay.io/infinispan/server:15.1.3.Final"
+                  },
+                  {
+                    "upstream-version": "15.1.4",
+                    "image": "quay.io/infinispan/server:15.1.4.Final"
                   }
                 ]
             - name: POD_NAME
