--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -125,6 +125,10 @@ spec:
                     "image": "quay.io/infinispan/server:15.0.11.Final"
                   },
                   {
+                    "upstream-version": "15.0.13",
+                    "image": "quay.io/infinispan/server:15.0.13.Final"
+                  },
+                  {
                     "upstream-version": "15.1.0",
                     "image": "quay.io/infinispan/server:15.1.0.Final"
                   },
