--- a/.github/workflows/image_release.yaml
+++ b/.github/workflows/image_release.yaml
@@ -20,6 +20,9 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+        with:
+          image: tonistiigi/binfmt:qemu-v9.2.0
+          cache-image: false
 
       - name: Set up Docker Buildx
         id: buildx
