--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -147,6 +147,10 @@ spec:
                   {
                     "upstream-version": "15.1.5",
                     "image": "quay.io/infinispan/server:15.1.5.Final"
+                  },
+                  {
+                    "upstream-version": "15.1.7",
+                    "image": "quay.io/infinispan/server:15.1.7.Final"
                   }
                 ]
             - name: POD_NAME
