--- a/documentation/asciidoc/topics/yaml/batch_inline.yaml
+++ b/documentation/asciidoc/topics/yaml/batch_inline.yaml
@@ -5,6 +5,5 @@ metadata:
 spec:
   cluster: {example_crd_name}
   config: |
-    create cache --template=org.infinispan.DIST_SYNC mycache
-    put --cache=mycache hello world
-    put --cache=mycache hola mundo
+    create counter --concurrency-level=1 --initial-value=5 --storage=VOLATILE --type=weak batch-counter
+
