--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -155,6 +155,10 @@ spec:
                   {
                     "upstream-version": "15.1.7",
                     "image": "quay.io/infinispan/server:15.1.7.Final"
+                  },
+                  {
+                    "upstream-version": "15.2.1",
+                    "image": "quay.io/infinispan/server:15.2.1.Final"
                   }
                 ]
             - name: POD_NAME
