--- a/documentation/asciidoc/topics/yaml/xsite_tls.yaml
+++ b/documentation/asciidoc/topics/yaml/xsite_tls.yaml
@@ -16,15 +16,15 @@ spec:
         encryption:
           protocol: TLSv1.3
           transportKeyStore:
-            secretName: transport-tls-secret
-            alias: transport
-            filename: keystore.p12
+            secretName: {ks_secret}
+            alias: {alias}
+            filename: {keystore}
           routerKeyStore:
-            secretName: router-tls-secret
-            alias: router
-            filename: keystore.p12
+            secretName: {ks_secret}
+            alias: {alias}
+            filename: {keystore}
           trustStore:
-            secretName: truststore-tls-secret
-            filename: truststore.p12
+            secretName: {ts_secret}
+            filename: {truststore}
       locations:
         # ...
