Only execute upgrade tests with Infinispan 14.0.23.Final or higher to avoid known clustering issues causing flakiness
Known issues:

- https://issues.redhat.com/browse/ISPN-14782
- https://issues.redhat.com/browse/ISPN-14793
- https://issues.redhat.com/browse/ISPN-15151
- https://issues.redhat.com/browse/ISPN-15191
- https://issues.redhat.com/browse/ISPN-15357

--- a/.github/workflows/test_upgrades.yml
+++ b/.github/workflows/test_upgrades.yml
@@ -125,7 +125,9 @@ jobs:
               exit 1
             fi
           else
-            export SUBSCRIPTION_STARTING_CSV=infinispan-operator.v2.3.2
+            # We must start on a server version greater than 14.0.23.Final to prevent known clustering issues during upgrades
+            # See commit message for a detailed list
+            export SUBSCRIPTION_STARTING_CSV=infinispan-operator.v2.3.7
           fi
           make upgrade-test
         env:
