--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -167,7 +167,11 @@ spec:
                   {
                     "upstream-version": "15.2.2",
                     "image": "quay.io/infinispan/server:15.2.2.Final"
-                    },
+                  },
+                  {
+                    "upstream-version": "15.2.4",
+                    "image": "quay.io/infinispan/server:15.2.4.Final"
+                  },
                   {
                     "upstream-version": "16.0.0",
                     "image": "quay.io/infinispan-test/server:main"
