--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -167,6 +167,10 @@ spec:
                   {
                     "upstream-version": "15.2.2",
                     "image": "quay.io/infinispan/server:15.2.2.Final"
+                  },
+                  {
+                    "upstream-version": "15.2.4",
+                    "image": "quay.io/infinispan/server:15.2.4.Final"
                   }
                 ]
             - name: POD_NAME
