[#2300]Update the anti-affinity documentation
replace spec.affinity with spec.scheduling.affinity

Closes #2300.

--- a/documentation/asciidoc/topics/yaml/affinity_nodes_prefer.yaml
+++ b/documentation/asciidoc/topics/yaml/affinity_nodes_prefer.yaml
@@ -1,12 +1,13 @@
 spec:
-  affinity:
-    podAntiAffinity:
-      preferredDuringSchedulingIgnoredDuringExecution:
-      - weight: 100
-        podAffinityTerm:
-          labelSelector:
-            matchLabels:
-              app: infinispan-pod
-              clusterName: <cluster_name>
-              infinispan_cr: <cluster_name>
-          topologyKey: "kubernetes.io/hostname"
+  scheduling:
+    affinity:
+      podAntiAffinity:
+        preferredDuringSchedulingIgnoredDuringExecution:
+        - weight: 100
+          podAffinityTerm:
+            labelSelector:
+              matchLabels:
+                app: infinispan-pod
+                clusterName: <cluster_name>
+                infinispan_cr: <cluster_name>
+            topologyKey: "kubernetes.io/hostname"
