--- a/documentation/asciidoc/topics/yaml/affinity_zones_require.yaml
+++ b/documentation/asciidoc/topics/yaml/affinity_zones_require.yaml
@@ -1,10 +1,11 @@
 spec:
-  affinity:
-    podAntiAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-      - labelSelector:
-          matchLabels:
-            app: infinispan-pod
-            clusterName: <cluster_name>
-            infinispan_cr: <cluster_name>
-        topologyKey: "topology.kubernetes.io/zone"
+  scheduling:
+    affinity:
+      podAntiAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+        - labelSelector:
+            matchLabels:
+              app: infinispan-pod
+              clusterName: <cluster_name>
+              infinispan_cr: <cluster_name>
+          topologyKey: "topology.kubernetes.io/zone"
