--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -137,6 +137,10 @@ spec:
                     "image": "quay.io/infinispan/server:15.0.15.Final"
                   },
                   {
+                    "upstream-version": "15.0.16",
+                    "image": "quay.io/infinispan/server:15.0.16.Final"
+                  },
+                  {
                     "upstream-version": "15.1.0",
                     "image": "quay.io/infinispan/server:15.1.0.Final"
                   },
