--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -181,6 +181,10 @@ spec:
                     "image": "quay.io/infinispan/server:15.2.4.Final"
                   },
                   {
+                    "upstream-version": "15.2.5",
+                    "image": "quay.io/infinispan/server:15.2.5.Final"
+                  },
+                  {
                     "upstream-version": "16.0.0",
                     "image": "quay.io/infinispan-test/server:main"
                   }
