--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -179,6 +179,10 @@ spec:
                   {
                     "upstream-version": "15.2.4",
                     "image": "quay.io/infinispan/server:15.2.4.Final"
+                  },
+                  {
+                    "upstream-version": "15.2.5",
+                    "image": "quay.io/infinispan/server:15.2.5.Final"
                   }
                 ]
             - name: POD_NAME
