--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -38,5 +38,5 @@ runs:
     - name: Install Local Dependencies
       shell: bash
       run: |
-        make oc operator-sdk yq jq
+        make golangci-lint go-junit-report jq kustomize mockgen oc operator-sdk opm yq
         echo "$GITHUB_WORKSPACE/bin" >> $GITHUB_PATH
