--- a/scripts/test-catalog.yml
+++ b/scripts/test-catalog.yml
@@ -7,6 +7,10 @@ name: stable
 package: infinispan
 entries:
   - name: infinispan-operator.v2.5.0
+    replaces: infinispan-operator.v2.4.15
+  - name: infinispan-operator.v2.4.15
+    replaces: infinispan-operator.v2.4.14
+  - name: infinispan-operator.v2.4.14
     replaces: infinispan-operator.v2.4.13
   - name: infinispan-operator.v2.4.13
     replaces: infinispan-operator.v2.4.12
