--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,3 +15,23 @@ updates:
     schedule:
       interval: daily
     open-pull-requests-limit: 10
+  # 2.4.x branch
+  - package-ecosystem: maven
+    directory: "/"
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 10
+    target-branch: "2.4.x"
+  - package-ecosystem: github-actions
+    directory: "/"
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 10
+    target-branch: "2.4.x"
+  - package-ecosystem: gomod
+    directory: "/"
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 10
+    target-branch: "2.4.x"
+
