--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -145,6 +145,10 @@ spec:
                     "image": "quay.io/infinispan/server:15.0.18.Final"
                   },
                   {
+                    "upstream-version": "15.0.19",
+                    "image": "quay.io/infinispan/server:15.0.19.Final"
+                  },
+                  {
                     "upstream-version": "15.1.0",
                     "image": "quay.io/infinispan/server:15.1.0.Final"
                   },
