--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -191,6 +191,10 @@ spec:
                   {
                     "upstream-version": "15.2.5",
                     "image": "quay.io/infinispan/server:15.2.5.Final"
+                  },
+                  {
+                    "upstream-version": "15.2.6",
+                    "image": "quay.io/infinispan/server:15.2.6.Final"
                   }
                 ]
             - name: POD_NAME
