--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -153,6 +153,10 @@ spec:
                     "image": "quay.io/infinispan/server:15.0.20.Final"
                   },
                   {
+                    "upstream-version": "15.0.21",
+                    "image": "quay.io/infinispan/server:15.0.21.Final"
+                  },
+                  {
                     "upstream-version": "15.1.0",
                     "image": "quay.io/infinispan/server:15.1.0.Final"
                   },
