--- a/scripts/test-catalog.yml
+++ b/scripts/test-catalog.yml
@@ -7,6 +7,8 @@ name: stable
 package: infinispan
 entries:
   - name: infinispan-operator.v2.5.0
+    replaces: infinispan-operator.v2.4.17
+  - name: infinispan-operator.v2.4.17
     replaces: infinispan-operator.v2.4.16
   - name: infinispan-operator.v2.4.16
     replaces: infinispan-operator.v2.4.15
