--- a/.github/workflows/test_hr_rolling_upgrades.yml
+++ b/.github/workflows/test_hr_rolling_upgrades.yml
@@ -22,11 +22,17 @@ jobs:
       - name: Install Dependencies
         uses: ./.github/actions/dependencies
 
+      - name: Cache Operand Images
+        uses: ./.github/actions/operand-cache
+
       - name: Initialize Kubernetes Cluster
         uses: ./.github/actions/kind
 
       - name: Run Hot Rod Rolling Upgrade Tests
-        run: make hotrod-upgrade-test
+        run: |
+          # Only upgrade to Operands that are currently defined in the manager.yaml
+          export TESTING_OPERAND_ALLOW_LIST=$(./scripts/ci/operand_versions.sh ,)
+          make hotrod-upgrade-test
         env:
           SUBSCRIPTION_STARTING_CSV: infinispan-operator.v2.3.7
           TESTING_OPERAND_IGNORE_LIST: ${{ inputs.skipList }}
