--- a/.github/workflows/test_webhooks.yml
+++ b/.github/workflows/test_webhooks.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Install Dependencies
         uses: ./.github/actions/dependencies
 
+      - name: Cache Operand Images
+        uses: ./.github/actions/operand-cache
+
       - name: Initialize Kubernetes Cluster
         uses: ./.github/actions/kind
 
