--- a/.github/workflows/test_upgrades.yml
+++ b/.github/workflows/test_upgrades.yml
@@ -83,6 +83,11 @@ jobs:
           ref: ${{ inputs.ref }}
           repository: ${{ inputs.repository }}
 
+      - name: Free Disk Space
+        # No need to free up disk space if only the latest Operator bundle is installed
+        if: inputs.upgradeDepth != 0
+        uses: jlumbroso/free-disk-space@v1.3.1
+
       - name: Install Dependencies
         uses: ./.github/actions/dependencies
 
