--- a/test-integration/pom.xml
+++ b/test-integration/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <!-- Dependencies versions -->
-        <version.infinispan>15.0.3.Final</version.infinispan>
+        <version.infinispan>16.0.1</version.infinispan>
         <version.fabric8>4.13.0</version.fabric8>
         <version.junit>5.7.0</version.junit>
         <version.lombok>1.18.30</version.lombok>
@@ -25,8 +25,8 @@
         <version.maven.surefire>2.22.0</version.maven.surefire>
 
         <!-- Compiler properties-->
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
     </properties>
 
     <modules>
