--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -199,6 +199,10 @@ spec:
                   {
                     "upstream-version": "15.2.6",
                     "image": "quay.io/infinispan/server:15.2.6.Final"
+                  },
+                  {
+                    "upstream-version": "16.0.1",
+                    "image": "quay.io/infinispan/server:16.0.1"
                   }
                 ]
             - name: POD_NAME
