--- a/.github/actions/operand-cache/action.yml
+++ b/.github/actions/operand-cache/action.yml
@@ -61,3 +61,10 @@ runs:
     - name: Available Images
       shell: bash
       run: docker images
+
+    # Clean up
+    - name: Remove the tar file
+      if: steps.cache-docker-images.outputs.cache-hit == 'true'
+      shell: bash
+      run: |
+        rm ${{ steps.images.outputs.tar }}
