--- a/.github/workflows/test_webhooks.yml
+++ b/.github/workflows/test_webhooks.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v6
 
+      - name: Free Disk Space
+        uses: jlumbroso/free-disk-space@v1.3.1
+
       - name: Install Dependencies
         uses: ./.github/actions/dependencies
 
