--- a/scripts/test-catalog.yml
+++ b/scripts/test-catalog.yml
@@ -6,6 +6,8 @@ schema: olm.channel
 name: stable
 package: infinispan
 entries:
+  - name: infinispan-operator.v2.5.2
+    replaces: infinispan-operator.v2.5.1
   - name: infinispan-operator.v2.5.1
     replaces: infinispan-operator.v2.5.0
   - name: infinispan-operator.v2.5.0
