Create PR in correct branch when using workflow_call

--- a/.github/workflows/add_operand.yml
+++ b/.github/workflows/add_operand.yml
@@ -90,3 +90,4 @@ jobs:
           token: ${{ secrets.INFINISPAN_RELEASE_TOKEN }}
           pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
           merge-method: rebase
+          repository: ${{ inputs.repository || github.repository }}
